# VortX

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  deny.toml
.github/workflows/: android.yml  desktop.yml  mpvkit-watch.yml  release-tvos.yml  vortx-core.yml
altstore/: README.md  source.json
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
app/: .xcdd-buildlog-VortXTV.txt  project.yml
app/Config/: ExternalSync.xcconfig.example
cloudflare/: .gitignore  README.md  e2e-2fa-test.mjs  e2e-reset-test.mjs  e2e-test.mjs  schema.sql  wrangler.toml  wrangler.toml.example
core/: Cargo.toml
core/src/: android_jni.rs  lib.rs
dept/: LOG-identity-followup.md  MISTAKES-identity-followup.md
desktop/: .gitignore  index.html  package-lock.json  package.json
docs/: 0.3.0-PRD.md  ANDROID-PLAN.md  DESIGN-SYSTEM.md  FEATURE-PARITY.md  LEGAL.md  REBASE-iOS.md  REVIEW-WORKLIST.md  streaming-server.md
scripts/: audit-bundle-symlinks.sh  build-core-xcframework.sh  build-ffi-xcframework.sh  build-mac-server.sh  build-vortx-core-xcframework.sh  check-binary-sources.sh  fetch-server-deps.sh  gen-altstore-source.py  xc-clean-caches.sh
vortx-core/: Cargo.toml  rust-toolchain.toml
vortx-core/crates/debrid/: Cargo.toml
vortx-core/crates/debrid/conformance/: credential_vectors.json  flywheel_vectors.json
vortx-core/crates/debrid/src/: credential.rs  flywheel.rs  lib.rs  resolve.rs  store.rs
vortx-core/crates/debrid/tests/: conformance.rs  flywheel.rs  resolve_properties.rs
vortx-core/crates/engine/: Cargo.toml
vortx-core/crates/engine/conformance/: dispatch_vectors.json  progress_vectors.json  resolve_catalog_vectors.json  resolve_debrid_vectors.json  resolve_homefeed_vectors.json  resolve_meta_vectors.json  resolve_settlestreams_vectors.json  resolve_streamload_vectors.json  resolve_subtitles_vectors.json  resolve_vectors.json
vortx-core/crates/engine/src/: action.rs  engine.rs  env.rs  ffi.rs  lib.rs  resolve.rs
vortx-core/crates/engine/tests/: conformance.rs  delta.rs  progress.rs  properties.rs  resolve.rs  resolve_catalog.rs  resolve_catalogload.rs  resolve_debrid.rs  resolve_epgload.rs  resolve_homefeed.proptest-regressions  resolve_homefeed.rs  resolve_loadroundtrip.rs  resolve_meta.rs  resolve_metaload.rs  resolve_prefs.rs  resolve_settlestreams.rs  resolve_streamload.rs  resolve_subtitles.rs  resolve_subtitlesload.rs
vortx-core/crates/live/: Cargo.toml
vortx-core/crates/live/conformance/: bind_vectors.json  catchup_vectors.json  channel_vectors.json  guide_vectors.json  m3u_vectors.json  xmltv_vectors.json  xtream_vectors.json
vortx-core/crates/live/src/: bind.rs  catchup.rs  channel.rs  epg.rs  guide.rs  hash.rs  lib.rs  m3u.rs  secret.rs  xtream.rs
vortx-core/crates/live/tests/: bind.rs  catchup.rs  channel.rs  guide.rs  m3u.rs  xmltv.rs  xtream.rs
vortx-core/crates/nzb/: Cargo.toml
vortx-core/crates/nzb/conformance/: nzb_vectors.json
vortx-core/crates/nzb/src/: lib.rs  model.rs  parse.rs  plan.rs
vortx-core/crates/nzb/tests/: nzb.rs
vortx-core/crates/playback-policy/: Cargo.toml
vortx-core/crates/playback-policy/conformance/: abr_vectors.json  piece_vectors.json  plan_vectors.json
vortx-core/crates/playback-policy/src/: abr.rs  kind.rs  lib.rs  piece.rs  plan.rs
vortx-core/crates/playback-policy/tests/: abr.rs  conformance.rs  piece.rs  plan_properties.rs
vortx-core/crates/protocol/: Cargo.toml
vortx-core/crates/protocol/conformance/: content_kind_vectors.json  video_timeline_vectors.json  vortx_stream_hints_vectors.json
vortx-core/crates/protocol/src/: audio.rs  content.rs  lib.rs  manifest.rs  resource.rs  transport.rs
vortx-core/crates/protocol/tests/: audio.rs  audio_vectors.json  content_kind.rs  video_timeline.rs  vortx_stream_hints.rs
vortx-core/crates/ranking/: Cargo.toml
vortx-core/crates/ranking/conformance/: antifraud_vectors.json  audio_rank_vectors.json  dedup_vectors.json  episode_vectors.json  parse_vectors.json  rank_vectors.json  release_vectors.json
vortx-core/crates/ranking/src/: antifraud.rs  dedup.rs  episode.rs  lib.rs  parse.rs  prefs.rs  rank.rs  release.rs
vortx-core/crates/ranking/tests/: antifraud.rs  audio_rank.rs  conformance.rs  dedup.rs  episode.rs  rank_conformance.rs  rank_properties.rs  release_conformance.rs  release_properties.rs
vortx-core/crates/source/: Cargo.toml
vortx-core/crates/source/conformance/: cached_vectors.json  epg_vectors.json  exit_vectors.json  fanout_vectors.json  identity_vectors.json  native_manifest.json  native_vectors.json  pagination_vectors.json  resolve_vectors.json  theme_full.json  token_keys.json  transport_vectors.json
vortx-core/crates/source/src/: cached.rs  canonical.rs  customization.rs  entry.rs  exit.rs  fanout.rs  identity.rs  lib.rs  manifest.rs  native.rs  orchestrate.rs  pagination.rs  registry.rs  request.rs  source.rs  transport.rs  validate.rs  verify.rs
vortx-core/crates/source/src/adapters/: mod.rs  nuvio.rs  stremio.rs
vortx-core/crates/source/tests/: cached.rs  conformance.rs  customization.rs  epg.rs  exit.rs  fanout.proptest-regressions  fanout.rs  identity.rs  native.rs  pagination.rs  properties.rs  resolve.rs  transport.rs
vortx-core/crates/state/: Cargo.toml
vortx-core/crates/state/conformance/: finish_vectors.json  maturity_vectors.json  pin_preimage_vectors.json  scrobble_vectors.json  timeline_vectors.json  watch_sync_vectors.json  watch_vectors.json
vortx-core/crates/state/src/: finish.rs  ids.rs  lib.rs  library.rs  maturity.rs  pin.rs  profile.rs  roster.rs  scrobble.rs  store.rs  timeline.rs  watch.rs
vortx-core/crates/state/tests/: conformance.rs  finish.rs  maturity.rs  roster_properties.rs  scrobble.rs  timeline.rs  watch.rs  watch_sync.rs
vortx-core/crates/subtitles/: Cargo.toml
vortx-core/crates/subtitles/conformance/: select_vectors.json
vortx-core/crates/subtitles/src/: lib.rs  model.rs  select.rs
vortx-core/crates/subtitles/tests/: conformance.rs  properties.rs
webapp/: README.md  index.html  package.json
(+636 files in other folders)
