[package]
name = "stremiox-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "StremioX native core, Rust ⇄ Swift FFI bridge over stremio-core (the real Stremio engine) for the tvOS app."

[lib]
name = "stremiox_core"
# staticlib → bundled into an .xcframework and linked by the tvOS app (like NodeMobile).
crate-type = ["staticlib"]

[dependencies]
# The real Stremio engine.
#  - `derive`          : the #[derive(Model)] proc-macro used by TvosModel.
#  - `env-future-send` : makes EnvFuture = Send BoxFuture so Runtime's Send+Sync bounds hold
#                        on a multi-threaded (non-wasm) host. REQUIRED for tvOS; wasm-incompatible.
#
# Pinned to an explicit rev, NOT a branch. A `branch = "development"` dep with no committed
# Cargo.lock (this crate gitignores its lock) re-resolves to whatever the upstream branch tip is
# on the day of the build, so unreviewed third-party code could land in a release build. This rev
# is the one already recorded in desktop/src-tauri/Cargo.lock, which keeps the Apple core and the
# desktop shell on the same engine, as the comment in that manifest claims. Moving this rev is a
# deliberate, reviewed act: bump it on purpose, never by rebuilding.
stremio-core = { git = "https://github.com/Stremio/stremio-core", rev = "f1f0228d78ce72133780705ccbabaa7716e966b8", features = ["derive", "env-future-send"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"

once_cell = "1"
futures = "0.3"
chrono = "0.4"

# Async executor for the engine's effects (Env::exec_concurrent / exec_sequential).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }

# HTTP for Env::fetch, rustls (no system OpenSSL/SecureTransport) so it stays a self-contained static lib.
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
opt-level = "s"
lto = true
