[package]
name = "vortx-debrid"
description = "VortX debrid layer: one StremThru-shaped DebridStore trait across RD/AD/Premiumize/TorBox/..., per-profile credentials, and a pure resolve-order planner (direct -> debrid-cached -> torrent) that reuses the vortx-hive CacheFact vault as a cross-node cache map. Pure: no HTTP/async; real store clients are a later phase."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
vortx-hive = { path = "../hive" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Prove the resolve planner is a deterministic total order.
proptest = "1"
