[package]
name = "vortx-engine"
description = "The VortX engine FFI shell: the JSON action/state dispatch core the platform bridges (Swift / Kotlin / TS) call. init_runtime builds a runtime over the first-class multi-profile VortxStore; dispatch_json applies a JSON Action and returns a JSON result + events; get_state_json serializes the state. Pure: the extern C / JNI wrappers and the resource-resolution routing into the source/debrid/ranking crates are later phases."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
vortx-state = { path = "../state" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"
