[package]
name = "vortx-engine"
description = "The VortX engine FFI shell: the JSON action/state dispatch core the platform bridges (Swift / Kotlin / TS) call. init_runtime builds a runtime over the first-class multi-profile VortxStore; dispatch_json applies a JSON Action and returns a JSON result + events; get_state_json serializes the state. Pure: the extern C / JNI wrappers and the resource-resolution routing into the source/debrid/ranking crates are later phases."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# rlib keeps intra-workspace use + `cargo test` working; staticlib/cdylib produce the linkable artifact
# the Swift (static) and Kotlin/JNI (dynamic) bridges load.
[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
vortx-state = { path = "../state" }
vortx-protocol = { path = "../protocol" }
vortx-ranking = { path = "../ranking" }
vortx-subtitles = { path = "../subtitles" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"
