[package]
name = "vortx-nzb"
description = "VortX native Usenet (NZB) engine: a pure NZB parser + the retrieval/health POLICY (completeness from the yEnc article counts, content-first streaming order with par2 deferred until a repair is actually needed). No network: the engine plans the retrieval and the host's NNTP client moves the bytes, so the same plan is reused by the app and the federation worker. stremio-core has no Usenet concept at all; VortX owns it natively alongside torrents and debrid."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
proptest = "1"
