[package]
name = "vortx-playback-policy"
description = "VortX engine-owned playback-policy planner: given a stream kind (HLS / HTTP-direct / debrid / torrent) and connection hints, deterministically decide the buffer target, prefetch window, ABR start tier, torrent piece window, player engine, and hardware-decode strictness. Pure, float-free, total. The decode and streaming themselves run in the platform-native players; the engine owns the deterministic policy so the speed wins are measurable and reproducible."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"
