[package]
name = "vortx-protocol"
description = "Stremio add-on protocol (manifest, transport URLs, catalog/meta/stream/subtitles) for VortX core. Stremio-compatible so the existing add-on ecosystem keeps working."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
percent-encoding.workspace = true
thiserror.workspace = true
