[package]
name = "vortx-state"
description = "VortX per-profile state foundation: profiles as first-class engine entities (each owns its library/CW/history), a convergent profile roster (union-by-id LWW + tombstones), and parental PIN hashing. Multi-profile is built into the engine, not bolted on as a Swift overlay, which is one of the core reasons VortX needs its own engine instead of stremio-core (one Profile + one LibraryBucket per account)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
vortx-ranking = { path = "../ranking" }
vortx-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2 = "0.10"

[dev-dependencies]
# Prove the roster merge is a convergent CRDT across thousands of random sync orders.
proptest = "1"
